--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: muhammadahmed1127
+          password: 8b:9z6@Z5\)~
 
       - name: Build Docker image
         run: docker build -t $IMAGE_NAME:$IMAGE_TAG ./
