--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           host: 64.23.160.144
           username: root
           key: ${{ secrets.SSH_KEY }}
-          script: |
-            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            docker ps -aq | xargs docker stop | xargs docker rm
-            docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG
+          # script: |
+          #   docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          #   docker ps -aq | xargs docker stop | xargs docker rm
+          #   docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG
