--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: muhammadahmed1127
-          password: 8b:9z6@Z5\)~
+          password: USX3XkxSpw56hgn5nHj
 
       - name: Build Docker image
         run: docker build -t $IMAGE_NAME:$IMAGE_TAG ./
