--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: muhammadahmed1127
-          password: USX3XkxSpw56hgn5nHj
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASS }}
 
       - name: Build Docker image
         run: docker build -t $IMAGE_NAME:$IMAGE_TAG ./
