--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,5 @@ jobs:
           script: |
             apt update && apt install docker.io -y
             docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASS }}
-            docker ps -aq | xargs docker stop | xargs docker rm
+            # docker ps -aq | xargs docker stop | xargs docker rm
             docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG
