--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
   # MongoDB service
-  mongodb:
-    image: mongo:7.0
+  mongo:
+    image: mongo:6.0
     container_name: webmart-mongodb
     restart: unless-stopped
     ports:
@@ -13,13 +13,13 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password123
       MONGO_INITDB_DATABASE: web-mart
     volumes:
-      - mongodb_data:/data/db
+      - mongo_data:/data/db
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     networks:
       - webmart-network
 
   # Node.js application service
-  webmart-app:
+  app:
     build: .
     container_name: webmart-app
     restart: unless-stopped
@@ -27,17 +27,17 @@ services:
       - "3001:3001"
     environment:
       - NODE_ENV=production
-      - MONGODB_URI=mongodb://mongodb:27017/web-mart
-      - JWT_SECRET=your-super-secret-jwt-key-change-this
+      - JWT_SECRET=webmart-pakistan-jwt-secret-key-2024
+      - MONGO_URI=mongodb://mongo:27017/web-mart
     depends_on:
-      - mongodb
+      - mongo
     volumes:
       - ./public/uploads:/app/public/uploads
     networks:
       - webmart-network
 
 volumes:
-  mongodb_data:
+  mongo_data:
 
 networks:
   webmart-network:
